--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,53 @@
 body {
     padding-top: 5rem;
 }
+
+.card{
+    width: 450px;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* border: 10px solid ; */
+    border-width: 4px solid #808080;
+    border-style: outset;
+    padding-bottom: 15px;
+}
+
+.top-info{
+    background-color:#008080; 
+    color:white;
+    font-size:16px;
+    padding:3px;
+    line-height: 10px; 
+}
+
+.bio{
+    text-align: center;
+    margin-top: 30px;
+    font-size: 15px;
+
+}
+
+#row-details{
+    display: inline-block;
+    text-align: center;
+}
+
+.row {
+    /* text-align:center; */
+    margin-left: 18%;
+    margin-right: 18%;
+    margin-top: 30px;
+    font-size: 15px;
+    line-height: 5px; 
+
+}
+
+.profile{
+    width:32%;
+    border-radius:100%;
+}
+
+button{
+    background-color: #008080;
+    color:white;
+}
